# disappearingflorida.org

./: .env.example  .gitignore  Makefile  README.md  run-dev.sh
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: density.py  locations.py  species.py
backend/app/data/: .gitkeep
backend/app/data/locations/: debary-ryanhomes-lennar.json  mtdora.json
backend/app/models/: __init__.py  density.py  location.py  species.py
backend/app/services/: __init__.py
backend/scripts/: create-responsive-images.sh  generate_location_json.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/data/: density-patterns.json  species.json
frontend/public/data/locations/: debary-ryanhomes-lennar.json  debary.json  generate_location_json.py  mtdora.json  the-villages.json
frontend/public/images/timelines/: normalize_satellite_colors.py
frontend/src/: App.vue
frontend/src/assets/: styles.css
frontend/src/components/: CallToAction.vue  FloridaMap.vue
frontend/src/components/density-calculator/: CityVisualization.vue  DensityInputPanel.vue  DensityResults.vue  ZoneSliders.vue
frontend/src/router/: index.js
frontend/src/utils/: debounce.js  densityCalculations.js  locationsIndex.js
frontend/src/utils/three/: buildingGenerator.js  buildingTypes.js  (+3 more)
frontend/src/views/: About.vue  DensityCalculator.vue  Home.vue  SatelliteImagery.vue  SpeciesList.vue  TakeAction.vue  TimeSlider.vue
static/css/: main.css
static/images/: .gitkeep
static/js/: main.js
(+1 files in other folders)
