[project]
name = "backend"
version = "0.1.0"
description = "Backend for Disappearing Florida"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.0",
    "pydantic-settings==2.6.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.12",
    "aiofiles==24.1.0",
]
